--- a/machine.html
+++ b/machine.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-26</p>
@@ -47,7 +51,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/5C242329AD'>SmartNews, Inc. - Jobs: Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/5C242329AD'>SmartNews, Inc. - Jobs: Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -134,7 +138,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
+<h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -169,7 +173,7 @@ Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p
 processing experience to join the ACV Labs team, working on a variety of cutting 
 edge?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clarifai/jobs/1784298?gh_jid=1784298'>Job Application for Applied Machine Learning Engineer at Clarifai</a></h5> 
+<h5><a href='https://boards.greenhouse.io/clarifai/jobs/1784298?gh_jid=1784298'>Job Application for Applied Machine Learning Engineer at Clarifai</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... You'll join our Applied Machine Learning Team and help our team drive customer 
 acquisition and revenue growth in 2019. You value collaboration and want to?...</p>
@@ -225,11 +229,11 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/product-manager-machine-learning-group-bdd-9697'>Product Manager (Machine Learning Group) : BDD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/product-manager-machine-learning-group-bdd-9697'>Product Manager (Machine Learning Group) : BDD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
@@ -266,7 +270,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/5jhspkto3ceuz375xqddho796h'>VP, Machine Learning Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/5jhspkto3ceuz375xqddho796h'>VP, Machine Learning Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -298,7 +302,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
+<h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -306,7 +310,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://genesys.referrals.selectminds.com/jobs/sr-machine-learning-engineer-3637'>Sr. Machine Learning Engineer - Genesys Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/sr-machine-learning-engineer-3637'>Sr. Machine Learning Engineer - Genesys Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -328,7 +332,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p>Jul 9, 2019 ... Interested to learn more about it? Let's chat. Especially if: - Research experience 
 in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -349,7 +353,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p>6 days ago ... Machine Learning Engineer. San Francisco. Engineering. Full-time. Apply for this 
 job. Dor is a retail analytics startup that uses a first-of-its-kind hardware and?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -382,7 +386,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/e2e7013b-1837-45ea-9537-f38a686bc6fe'>Labelbox - Machine Learning Support Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/labelbox/e2e7013b-1837-45ea-9537-f38a686bc6fe'>Labelbox - Machine Learning Support Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -467,11 +471,6 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <h5><a href='http://jobs.jobvite.com/splunk/job/ofYkafwr'>Splunk Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/getdor/4f47f0ad-584a-4c77-8e4f-b8feae3dd663'>Dor - Lead Machine Learning Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>2 days ago ... We've created a cloud-connected people counter that works for retailers of all 
-sizes, and allows our customers to view and analyze their foot-traffic data. We're?...</p>
 <hr/>
 
 
